Swagger Docs finishing touches
