# handlers/products.go
@@ -37,6 +37,22 @@ type productsRespose struct{
 	// in:body
 	Body []data.Product
 }
+// swagger:response  productResponse
+type productResponseWrapper struct{
+	// Product struct to Add Product
+	// in:body
+	// requred:true
+	Body data.Product
+}
+// swagger:parameters updateProduct addProduct
+type productParamsWrapper struct{
+	// Product struct to update Product  or Add Product
+	// in:body
+	// requred:true
+	Body data.Product
+}
+
+
 
 func NewProducts (l *log.Logger) *ProductHandler{
   return &ProductHandler{l}
@@ -57,13 +73,23 @@ func (p ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request)  {
     http.Error(w, "Unable to marshal data", http.StatusInternalServerError)
   }
 }
+// swagger:route POST /products products addProduct
+// Adds a product into dataStore
+// responses:
+//  200: productResponse
 
+// AddProduct adds a new product into the dataStore 
 func (p ProductHandler)AddProduct(w http.ResponseWriter, r *http.Request)  {
   p.l.Printf("Recieved a %s request from :: %s", r.Method, r.URL)
 	prod := r.Context().Value(ProductKey{}).(data.Product)	
 	data.AddProduct(&prod)
 }
+// swagger:route PUT /products/{id} products updateProduct
+// Updates a product in the dataStore
+// responses:
+//  201: noContent
 
+// UpdateProduct updates a product in database
 func (p ProductHandler)UpdateProduct(w http.ResponseWriter, r *http.Request)  {
   p.l.Printf("Recieved a %s request from :: %s", r.Method, r.URL)
 	vars := mux.Vars(r)
@@ -79,6 +105,29 @@ func (p ProductHandler)UpdateProduct(w http.ResponseWriter, r *http.Request)  {
 		http.Error(w,"Could not find product", http.StatusBadRequest)
 		return
 	}
+}
+
+// swagger:route DELETE /products/{id} products deleteProduct
+// deletes a product from Datastore
+// responses:
+//  201: noContent
+
+// DeleteProduct deletes a product from database
+func (p ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request )  {
+	p.l.Printf("Recieved a %s request from :: %s", r.Method, r.URL)
+	vars := mux.Vars(r)
+	id , err:= strconv.Atoi(vars["id"])
+	p.l.Printf("ID is :: %d", id)
+	if err != nil{
+		http.Error(w,"Could not parse id", http.StatusBadRequest)
+		return
+	}
+	err = data.DeleteProduct(id)
+	if err != nil{
+		http.Error(w,fmt.Sprintf("Could not delete product:: %s", err), http.StatusBadRequest)
+		return
+	}
+	w.WriteHeader(http.StatusNoContent)
 }
 
 type ProductKey struct{}
